Add functionality to filter user collection items
